Working on the header

--- a/index.html
+++ b/index.html
@@ -1,3 +1,36 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Michael Scott Portfolio</title>
+</head>
 
+<body>
+
+    <header>
+    <nav>
+        <img src="/images/dunder-mifflin-logo.png" alt="Dunder Mifflin">
+        <ul class="menu">
+            <li>
+                <a class="link" href="#">About me</a>
+            </li>
+            <li>
+                <a class="link" href="#">Skills</a>
+            </li>
+            <li>
+                <a class="link" href="#">Contact</a>
+            </li>
+        </ul>
+    </nav>
+ 
+    <div>
+        <img src="https://i.blogs.es/a7956b/michael-scott/1366_2000.jpeg" alt="Michael Scott">
+    </div>
+    <div>
+        <h1>Michael Scott</h1>
+    </div>
+    </header>  
 
     
