--- a/index.html
+++ b/index.html
@@ -33,4 +33,38 @@
     </div>
     </header>  
 
+    <main>
+        <section>
+            <article>
+                <h2>About me</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Repudiandae quos praesentium ipsa saepe beatae at 
+                pariatur nisi nam, aliquam maiores dolorum voluptatum? 
+                Inventore nisi ea sint voluptatibus. A, vitae quasi.</p>
+            </article>
+        </section>
+        <section>
+            <h3>Skills</h3>
+
+            <span>Distracting others</span>
+            <div class="skill">
+                <div class="skill_progress" id="skill_distracting"></div>
+            </div>
+
+            <span>Procrastination</span>
+            <div class="skill">
+                <div class="skill_progress" id="skill_procrastination"></div>
+            </div>
+
+            <span>Critical thinking</span>
+            <div class="skill">
+                <div class="skill-progress" id="skill_critical_thinking"></div>
+            </div>
+        </section>
+
+    </main>
+    
+</body>
+</html>
+
     
