Working on footer

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <div class="skill-progress" id="skill_critical_thinking"></div>
             </div>
         </section>
-        
+
         <section>
             <h3>Would you like to work at Dunder Mifflin?</h3>
         </section>
@@ -100,6 +100,15 @@
             <input type="submit" name="submit" value="Submit">
         </form>
     </main>
+
+    <footer>
+        <a href="#" target="_blank">
+            <img src="https://cdn-icons-png.flaticon.com/512/49/49656.png" alt="linkedin">
+        </a>
+        <a href="#" target="_blank">
+            <img src="https://cdn-icons-png.flaticon.com/512/81/81609.png" alt="twitter">
+        </a>
+    </footer>
 
 </body>
 </html>
