Fix image link at nav

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <header>
     <nav>
-        <img src="/images/dunder-mifflin-logo.png" alt="Dunder Mifflin">
+        <img src="/dunder-mifflin-logo.png 00-19-00-932.png" alt="Dunder Mifflin">
         <ul class="menu">
             <li>
                 <a class="link" href="#">About me</a>
