Add styles to header

--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Michael Scott Portfolio</title>
+    <link rel="stylesheet" href="/style.css">
 </head>
 
 <body>
 
     <header>
-    <nav>
-        <img src="/dunder-mifflin-logo.png 00-19-00-932.png" alt="Dunder Mifflin">
+    <nav class="navbar">
+        <img class="logo" src="/dunder-mifflin-logo.png 00-19-00-932.png" alt="Dunder Mifflin">
         <ul class="menu">
             <li>
                 <a class="link" href="#">About me</a>
@@ -25,11 +26,9 @@
         </ul>
     </nav>
  
-    <div>
+    <div class="container">
         <img src="https://i.blogs.es/a7956b/michael-scott/1366_2000.jpeg" alt="Michael Scott">
-    </div>
-    <div>
-        <h1>Michael Scott</h1>
+        <h1 class="centered">Michael Scott</h1>
     </div>
     </header>  
 
