Working on progress bars

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
  
     <div class="container">
         <img src="https://i.blogs.es/a7956b/michael-scott/1366_2000.jpeg" alt="Michael Scott">
-        <h1 class="centered">Michael Scott</h1>
+        <h1>Michael Scott</h1>
     </div>
     </header>  
 
@@ -45,20 +45,26 @@
         <section>
             <h3>Skills</h3>
 
-            <span>Distracting others</span>
+            <span>Ice hockey</span>
             <div class="skill">
-                <div class="skill_progress" id="skill_distracting"></div>
+                <div class="skill_animation" id="skill_hockey"></div>
             </div>
 
-            <span>Procrastination</span>
+            <span>Parkour</span>
             <div class="skill">
-                <div class="skill_progress" id="skill_procrastination"></div>
+                <div class="skill_animation" id="skill_parkour"></div>
             </div>
 
-            <span>Critical thinking</span>
+            <span>Basketball</span>
             <div class="skill">
-                <div class="skill-progress" id="skill_critical_thinking"></div>
+                <div class="skill_animation" id="skill_basket"></div>
             </div>
+            
+            <span>Song parody writing</span>
+            <div class="skill">
+                <div class="skill_animation" id="skill_song"></div>
+            </div>
+
         </section>
 
         <section>
