Add footer styles

--- a/index.html
+++ b/index.html
@@ -117,12 +117,12 @@
         </form>
     </main>
 
-    <footer>
+    <footer class="footer">
         <a href="#" target="_blank">
-            <img src="https://cdn-icons-png.flaticon.com/512/49/49656.png" alt="linkedin">
+            <img class="png" src="https://cdn-icons-png.flaticon.com/512/49/49656.png" alt="linkedin">
         </a>
         <a href="#" target="_blank">
-            <img src="https://cdn-icons-png.flaticon.com/512/81/81609.png" alt="twitter">
+            <img class="png" src="https://cdn-icons-png.flaticon.com/512/81/81609.png" alt="twitter">
         </a>
     </footer>
 
