--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
         <img class="logo" src="/dunder-mifflin-logo.png 00-19-00-932.png" alt="Dunder Mifflin">
         <ul class="menu">
             <li>
-                <a class="link" href="#">About me</a>
+                <a class="link" href="#about_me">About me</a>
             </li>
             <li>
-                <a class="link" href="#">Skills</a>
+                <a class="link" href="#skills">Skills</a>
             </li>
             <li>
-                <a class="link" href="#">Contact</a>
+                <a class="link" href="#contact">Contact</a>
             </li>
         </ul>
     </nav>
@@ -34,7 +34,7 @@
 
     <main>
         <section>
-            <article>
+            <article id="about_me">
                 <h2>About me</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Repudiandae quos praesentium ipsa saepe beatae at 
@@ -43,7 +43,7 @@
             </article>
         </section>
         <section>
-            <h3>Skills</h3>
+            <h3 id="skills">Skills</h3>
 
             <span>Ice hockey</span>
             <div class="skill">
@@ -68,7 +68,7 @@
         </section>
 
         <section>
-            <h3>Would you like to work at Dunder Mifflin?</h3>
+            <h3 id="contact">Would you like to work at Dunder Mifflin?</h3>
         </section>
 
         <form action="#" method="post">
