--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <header>
     <nav class="navbar">
-        <img class="logo" src="/dunder-mifflin-logo.png 00-19-00-932.png" alt="Dunder Mifflin">
+        <img class="logo" src="/images/dunder-mifflin-logo.png" alt="Dunder Mifflin">
         <ul class="menu">
             <li>
                 <a class="link" href="#about_me">About me</a>
@@ -27,8 +27,7 @@
     </nav>
  
     <div class="container">
-        <img src="https://i.blogs.es/a7956b/michael-scott/1366_2000.jpeg" alt="Michael Scott">
-        <h1>Michael Scott</h1>
+        <h1 class="healine-background">Michael Scott</h1>
     </div>
     </header>  
 
@@ -36,10 +35,9 @@
         <section>
             <article id="about_me">
                 <h2>About me</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Repudiandae quos praesentium ipsa saepe beatae at 
-                pariatur nisi nam, aliquam maiores dolorum voluptatum? 
-                Inventore nisi ea sint voluptatibus. A, vitae quasi.</p>
+                <p>A loyal and dedicated manager, with over 18 years of experience as 
+                branch manager and salesman at Dunder Mifflin, Scranton. Good at creating 
+                a friendly environment with a supreme work ethic.</p>
             </article>
         </section>
         <section>
