--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Michael Scott Portfolio</title>
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
     <header>
     <nav class="navbar">
-        <img class="logo" src="/images/dunder-mifflin-logo.png" alt="Dunder Mifflin">
+        <img class="logo" src="images/dunder-mifflin-logo.png" alt="Dunder Mifflin">
         <ul class="menu">
             <li>
                 <a class="link" href="#about_me">About me</a>
